[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Event_chat_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/font_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font_60.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Event_chat_panel" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 722.0
margin_bottom = 1281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back_button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -1007.0
margin_right = -41.0
margin_bottom = -915.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send_button" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -1009.0
margin_right = 225.0
margin_bottom = -910.0
custom_fonts/font = ExtResource( 3 )
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Control"]
margin_left = 33.0
margin_top = 380.024
margin_right = 693.0
margin_bottom = 1239.02
custom_fonts/font = ExtResource( 2 )
custom_constants/line_separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control"]
margin_left = 45.5198
margin_top = 148.516
margin_right = 683.52
margin_bottom = 199.516
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "title"

[node name="Refresh_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -1012.0
margin_right = 124.0
margin_bottom = -912.0
custom_fonts/font = ExtResource( 3 )
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_Event_chat_panel_visibility_changed"]
[connection signal="pressed" from="Control/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Control/Send_button" to="." method="_on_Send_button_pressed"]
[connection signal="pressed" from="Control/Refresh_button" to="." method="_on_Refresh_button_pressed"]
